--- a/src/pug/checkout__delivery.pug
+++ b/src/pug/checkout__delivery.pug
@@ -10,9 +10,7 @@ block checkout
         +icon('checked','color-theme-white')
       .h3.flex-grow-1.font-weight-bold.color-theme-brand Дополнительные услуги
       button.btn.btn_nobg.h5.h-auto.p-0(type="button")
-        span.mr-sm-2(style="width:20px;height:24px;")
-          +svg('edit','icon-fluid color-theme-brand h3')
-        //- +icon('edit','color-theme-brand h3 mr-2')
+        +icon('edit','h3 color-theme-brand mr-sm-2')
         .d-none.d-sm-block Изменить
   form.section.py-0.mb-3(action="#")
     .border-bottom.d-flex.align-items-center.px-md-4.px-3.py-2
@@ -20,9 +18,7 @@ block checkout
         +icon('checked','color-theme-white')
       .h3.flex-grow-1.font-weight-bold.color-theme-brand Покупатель
       button.btn.btn_nobg.h5.h-auto.p-0(type="button")
-        span.mr-sm-2(style="width:20px;height:24px;")
-          +svg('edit','icon-fluid color-theme-brand h3')
-        //- +icon('edit','color-theme-brand h3 mr-2')
+        +icon('edit','h3 color-theme-brand mr-sm-2')
         .d-none.d-sm-block Изменить
     .desclist.desclist.px-md-4.px-3.py-md-4.py-3
       .d-flex.align-items-center.mb-1
