--- a/src/pug/ui_icons.pug
+++ b/src/pug/ui_icons.pug
@@ -137,6 +137,14 @@ block wrapper
           +svg('winter')
         .d-inline-block.pr-5.mb-1(style="width:80px;height:80px;")
           +svg('youtube')
+        .d-inline-block.pr-5.mb-1(style="width:80px;height:80px;")
+          +svg('edit')
+        .d-inline-block.pr-5.mb-1(style="width:80px;height:80px;")
+          +svg('share')
+        .d-inline-block.pr-5.mb-1(style="width:80px;height:80px;")
+          +svg('continue')
+        .d-inline-block.pr-5.mb-1(style="width:80px;height:80px;")
+          +svg('close-noborder')
     .col-md-3
       .d-flex.flex-column
         .h2.font-weight-bold.mb-2 Шрифт
@@ -278,5 +286,13 @@ block wrapper
           span.h1.ds-icon-winter
         .d-flex.flex-column.justify-content-center.pr-5.mb-1(style="width:80px;height:80px;")
           span.h1.ds-icon-youtube
+        .d-flex.flex-column.justify-content-center.pr-5.mb-1(style="width:80px;height:80px;")
+          span.h1.ds-icon-edit
+        .d-flex.flex-column.justify-content-center.pr-5.mb-1(style="width:80px;height:80px;")
+          span.h1.ds-icon-share
+        .d-flex.flex-column.justify-content-center.pr-5.mb-1(style="width:80px;height:80px;")
+          span.h1.ds-icon-continue
+        .d-flex.flex-column.justify-content-center.pr-5.mb-1(style="width:80px;height:80px;")
+          span.h1.ds-icon-close-noborder
 
 block footer
