--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -38,6 +38,8 @@ $grid-gutter-width: 8px;
 @import 'tpl/cart';
 @import 'tpl/card';
 @import 'tpl/card-row';
+@import 'tpl/zoom';
+@import 'tpl/label';
 @import 'tpl/modal';
 @import 'tpl/promo';
 @import 'tpl/brand';
