--- a/src/scss/icons/variables.scss
+++ b/src/scss/icons/variables.scss
@@ -1,7 +1,13 @@
 $icomoon-font-family: "donshina" !default;
 $icomoon-font-path: "../fonts" !default;
 
-$ds-icon-close: "\e948";
+$ds-icon-desc: "\e94d";
+$ds-icon-notify: "\e94e";
+$ds-icon-points: "\e94f";
+$ds-icon-reviews: "\e950";
+$ds-icon-view: "\e951";
+$ds-icon-wallet: "\e952";
+$ds-icon-zoom: "\e953";
 $ds-icon-allseason-path1: "\e900";
 $ds-icon-allseason-path2: "\e901";
 $ds-icon-arrow-left: "\e902";
@@ -15,62 +21,67 @@ $ds-icon-card: "\e909";
 $ds-icon-cart: "\e90a";
 $ds-icon-case: "\e90b";
 $ds-icon-checked: "\e90c";
-$ds-icon-compare: "\e90d";
-$ds-icon-credit: "\e90e";
-$ds-icon-delivery: "\e90f";
-$ds-icon-dropdown: "\e910";
-$ds-icon-email: "\e911";
-$ds-icon-emoji: "\e912";
-$ds-icon-exit: "\e913";
-$ds-icon-eye: "\e914";
-$ds-icon-facebook: "\e915";
-$ds-icon-favourite: "\e916";
-$ds-icon-filter: "\e917";
-$ds-icon-founding-path1: "\e918";
-$ds-icon-founding-path2: "\e919";
-$ds-icon-gift: "\e91a";
-$ds-icon-instagram: "\e91b";
-$ds-icon-iron: "\e91c";
-$ds-icon-list: "\e91d";
-$ds-icon-logo-path1: "\e91e";
-$ds-icon-logo-path2: "\e91f";
-$ds-icon-logo-path3: "\e920";
-$ds-icon-logo-path4: "\e921";
-$ds-icon-logo-path5: "\e922";
-$ds-icon-logo-path6: "\e923";
-$ds-icon-menu: "\e924";
-$ds-icon-moto: "\e925";
-$ds-icon-nonspikes: "\e926";
-$ds-icon-oil: "\e927";
-$ds-icon-phone: "\e928";
-$ds-icon-phone-nobg: "\e929";
-$ds-icon-placemark: "\e92a";
-$ds-icon-plane: "\e92b";
-$ds-icon-readmore: "\e92c";
-$ds-icon-readmore-reversed: "\e92d";
-$ds-icon-repair: "\e92e";
-$ds-icon-scales: "\e92f";
-$ds-icon-search: "\e930";
-$ds-icon-services: "\e931";
-$ds-icon-settings: "\e932";
-$ds-icon-shield: "\e933";
-$ds-icon-spikes: "\e934";
-$ds-icon-steel-path1: "\e935";
-$ds-icon-steel-path2: "\e936";
-$ds-icon-summer: "\e937";
-$ds-icon-target: "\e938";
-$ds-icon-tg: "\e939";
-$ds-icon-tg-filled: "\e93a";
-$ds-icon-tile: "\e93b";
-$ds-icon-time: "\e93c";
-$ds-icon-tires: "\e93d";
-$ds-icon-tool: "\e93e";
-$ds-icon-trash: "\e93f";
-$ds-icon-user: "\e940";
-$ds-icon-vk: "\e941";
-$ds-icon-wapp: "\e942";
-$ds-icon-wapp-filled: "\e943";
-$ds-icon-warranty: "\e944";
-$ds-icon-wheels: "\e945";
-$ds-icon-winter: "\e946";
-$ds-icon-youtube: "\e947";
+$ds-icon-close: "\e90d";
+$ds-icon-close-noborder: "\e90e";
+$ds-icon-compare: "\e90f";
+$ds-icon-continue: "\e910";
+$ds-icon-credit: "\e911";
+$ds-icon-delivery: "\e912";
+$ds-icon-dropdown: "\e913";
+$ds-icon-edit: "\e914";
+$ds-icon-email: "\e915";
+$ds-icon-emoji: "\e916";
+$ds-icon-exit: "\e917";
+$ds-icon-eye: "\e918";
+$ds-icon-facebook: "\e919";
+$ds-icon-favourite: "\e91a";
+$ds-icon-filter: "\e91b";
+$ds-icon-founding-path1: "\e91c";
+$ds-icon-founding-path2: "\e91d";
+$ds-icon-gift: "\e91e";
+$ds-icon-instagram: "\e91f";
+$ds-icon-iron: "\e920";
+$ds-icon-list: "\e921";
+$ds-icon-logo-path1: "\e922";
+$ds-icon-logo-path2: "\e923";
+$ds-icon-logo-path3: "\e924";
+$ds-icon-logo-path4: "\e925";
+$ds-icon-logo-path5: "\e926";
+$ds-icon-logo-path6: "\e927";
+$ds-icon-menu: "\e928";
+$ds-icon-moto: "\e929";
+$ds-icon-nonspikes: "\e92a";
+$ds-icon-oil: "\e92b";
+$ds-icon-phone: "\e92c";
+$ds-icon-phone-nobg: "\e92d";
+$ds-icon-placemark: "\e92e";
+$ds-icon-plane: "\e92f";
+$ds-icon-readmore: "\e930";
+$ds-icon-readmore-reversed: "\e931";
+$ds-icon-repair: "\e932";
+$ds-icon-scales: "\e933";
+$ds-icon-search: "\e934";
+$ds-icon-services: "\e935";
+$ds-icon-settings: "\e936";
+$ds-icon-share: "\e937";
+$ds-icon-shield: "\e938";
+$ds-icon-spikes: "\e939";
+$ds-icon-steel-path1: "\e93a";
+$ds-icon-steel-path2: "\e93b";
+$ds-icon-summer: "\e93c";
+$ds-icon-target: "\e93d";
+$ds-icon-tg: "\e93e";
+$ds-icon-tg-filled: "\e93f";
+$ds-icon-tile: "\e940";
+$ds-icon-time: "\e941";
+$ds-icon-tires: "\e942";
+$ds-icon-tool: "\e943";
+$ds-icon-trash: "\e944";
+$ds-icon-user: "\e945";
+$ds-icon-vk: "\e946";
+$ds-icon-wapp: "\e947";
+$ds-icon-wapp-filled: "\e948";
+$ds-icon-warranty: "\e949";
+$ds-icon-wheels: "\e94a";
+$ds-icon-winter: "\e94b";
+$ds-icon-youtube: "\e94c";
