--- a/src/scss/tpl/_tabs.scss
+++ b/src/scss/tpl/_tabs.scss
@@ -1,8 +1,3 @@
-.tabs__nav {
-  @extend %flex-item;
-  @extend %list-default;
-}
-
 .tabs__nav-item {
   &:first-child {
     .tabs__nav-link {
@@ -23,10 +18,8 @@
 
 .tabs__nav-link {
   @extend %zi-1;
-  @extend %flex-item;
   @include before;
-  align-items: center;
-  justify-content: center;
+  margin-bottom: -2px;
   border-radius: .5rem .5rem 0 0;
   color: $color__disabled;
   background: $color__light;
@@ -47,15 +40,17 @@
       color: $color__brand;
     }
 
+    &:before {
+      background: #fff;
+    }
   }
 
   &:before {
     left: -20px;
     right: -20px;
     bottom: -20px;
-    //height: 40px;
     height: 20px;
-    background: #fff;
+    background: $color__light;
   }
 
   &.tabs__nav-link_notitle {
@@ -88,14 +83,9 @@
 }
 
 .tabs__nav-icon {
-  @include fw(22px);
-  @include wh(22px,22px);
-  margin: 0 .625rem 0 0;
-}
-
-.tabs__nav-title {
-  @include h3;
-  font-weight: bold;
+  @include media-breakpoint-up(sm) {
+    margin-right: .625rem;
+  }
 }
 
 .tabs__content {
