--- a/src/pug/ui_icons.pug
+++ b/src/pug/ui_icons.pug
@@ -145,6 +145,26 @@ block wrapper
           +svg('continue')
         .d-inline-block.pr-5.mb-1(style="width:80px;height:80px;")
           +svg('close-noborder')
+        .d-inline-block.pr-5.mb-1(style="width:80px;height:80px;")
+          +svg('desc')
+        .d-inline-block.pr-5.mb-1(style="width:80px;height:80px;")
+          +svg('notify')
+        .d-inline-block.pr-5.mb-1(style="width:80px;height:80px;")
+          +svg('points')
+        .d-inline-block.pr-5.mb-1(style="width:80px;height:80px;")
+          +svg('reviews')
+        .d-inline-block.pr-5.mb-1(style="width:80px;height:80px;")
+          +svg('view')
+        .d-inline-block.pr-5.mb-1(style="width:80px;height:80px;")
+          +svg('wallet')
+        .d-inline-block.pr-5.mb-1(style="width:80px;height:80px;")
+          +svg('zoom')
+        .d-inline-block.pr-5.mb-1(style="width:80px;height:80px;")
+          +svg('phonehandset')
+        .d-inline-block.pr-5.mb-1(style="width:80px;height:80px;")
+          +svg('checked-double')
+        .d-inline-block.pr-5.mb-1(style="width:80px;height:80px;")
+          +svg('readmore-right')
     .col-md-3
       .d-flex.flex-column
         .h2.font-weight-bold.mb-2 Шрифт
@@ -294,5 +314,25 @@ block wrapper
           span.h1.ds-icon-continue
         .d-flex.flex-column.justify-content-center.pr-5.mb-1(style="width:80px;height:80px;")
           span.h1.ds-icon-close-noborder
+        .d-flex.flex-column.justify-content-center.pr-5.mb-1(style="width:80px;height:80px;")
+          span.h1.ds-icon-desc
+        .d-flex.flex-column.justify-content-center.pr-5.mb-1(style="width:80px;height:80px;")
+          span.h1.ds-icon-notify
+        .d-flex.flex-column.justify-content-center.pr-5.mb-1(style="width:80px;height:80px;")
+          span.h1.ds-icon-points
+        .d-flex.flex-column.justify-content-center.pr-5.mb-1(style="width:80px;height:80px;")
+          span.h1.ds-icon-reviews
+        .d-flex.flex-column.justify-content-center.pr-5.mb-1(style="width:80px;height:80px;")
+          span.h1.ds-icon-view
+        .d-flex.flex-column.justify-content-center.pr-5.mb-1(style="width:80px;height:80px;")
+          span.h1.ds-icon-wallet
+        .d-flex.flex-column.justify-content-center.pr-5.mb-1(style="width:80px;height:80px;")
+          span.h1.ds-icon-zoom
+        .d-flex.flex-column.justify-content-center.pr-5.mb-1(style="width:80px;height:80px;")
+          span.h1.ds-icon-phonehandset
+        .d-flex.flex-column.justify-content-center.pr-5.mb-1(style="width:80px;height:80px;")
+          span.h1.ds-icon-checked-double
+        .d-flex.flex-column.justify-content-center.pr-5.mb-1(style="width:80px;height:80px;")
+          span.h1.ds-icon-readmore-right
 
 block footer
