--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -71,6 +71,7 @@ $grid-gutter-width: 8px;
 @import 'tpl/table-row';
 @import 'tpl/readmore';
 @import 'tpl/toggler';
+@import 'tpl/notify';
 @import 'tpl/review';
 @import 'tpl/params';
 @import 'tpl/result';
