--- a/src/pug/position.pug
+++ b/src/pug/position.pug
@@ -14,65 +14,77 @@ block wrapper
     section.content
       h1 Летние шины Pirelli P Zero 235/60 R17 102Y
     .row.mb-5
-      .col-md-4
-        .text-center.box-shadow.border-radius.pos-rel.p-4.mb-2
+      .col-lg-4
+        .text-center.box-shadow.border-radius.pos-rel.p-md-4.p-3.mb-2
           +img('content/cards/pirelli.jpg')
           .label.label_hit.label_pos_abs.text-uppercase.px-2 Хит
-          a.zoom(href="#")
+          a.zoom(href="img/content/cards/pirelli.jpg" data-fancybox="gallery")
             +icon('zoom','h4 color-theme-brand')
         a.d-flex.align-items-center.justify-content-around.box-shadow.border-radius.p-3.mb-2(href="#")
           +img('content/logo/logo-4.jpg')
           span.h5 Bridgestone
-      .col-md-8
-        .box-shadow.border-radius.p-4.mb-2
+      .col-lg-8
+        .d-flex.flex-wrap.align-items-center.box-shadow.border-radius.text-center.text-md-left.p-md-4.p-3.mb-2
+          .col-md-4.px-0.mb-2.mb-md-0
+            .h2.font-weight-bold Нет в наличии
+          .col-md-8
+            button.btn.h4.text-uppercase(type="button" data-toggle="modal" data-target="#alert")
+              +icon('phonehandset','h3 color-theme-white mr-2')
+              span сообщить,
+                span.d-block.d-sm-inline когда появится
+        .box-shadow.border-radius.p-md-4.p-3.mb-2
           form.row.align-items-center.mb-3(action="#")
-            .col-md-6.d-flex.align-items-center
-              .d-flex.align-items-center.flex-grow-1
-                .d-flex.align-items-end
-                  span.h2.font-weight-bold.text-nowrap.mr-1 7 337.12
-                  span.h3 ₽
-                .text-center.flex-grow-1
-                  +icon('close-noborder','h4 color-theme-disabled')
-              .recalculate.d-flex.align-items-center.flex-grow-1.overflow-hidden.bg-theme-brand.mr-1
-                input.recalculate__field.d-none(type="number" name="count" value="4")
-                button.recalculate__btn.font-weight-bold.color-theme-white.flex-grow-1.recalculate__btn_remove(type="button") -
-                .recalculate__value.d-flex.align-items-center.justify-content-center.color-theme-white 4
-                button.recalculate__btn.font-weight-bold.color-theme-white.flex-grow-1.recalculate__btn_add(type="button") +
-              a.btn.text-uppercase.px-3.mr-4(href="#") В корзину
-            .col-md-3
+            .cart-summary.cart-summary_row.col-xl-6.col-md-9.d-flex.flex-column.flex-sm-row.align-items-center.mb-2.mb-sm-0
+              .cart-summary__meta.d-flex.flex-grow-1.align-self-stretch.mb-3.mb-sm-0
+                .d-flex.align-items-center.flex-grow-1
+                  .d-flex.align-items-end.pos-rel
+                    span.h2.font-weight-bold.text-nowrap.mr-1 7 337.12
+                    span.h3 ₽
+                    .notify
+                      +icon('notify','notify__icon h3 color-theme-brand')
+                      .notify__desc.h6.d-none На сайте цена указана при покупке за 4 шт. Точную цену скажет менеджер при подтверждении заказа.
+                  .cart-summary__invisible.text-center.flex-grow-1
+                    +icon('close-noborder','h4 color-theme-disabled')
+                .recalculate.d-flex.align-items-center.flex-grow-1.overflow-hidden.bg-theme-brand.mr-1
+                  input.recalculate__field.d-none(type="number" name="count" value="4")
+                  button.recalculate__btn.font-weight-bold.color-theme-white.flex-grow-1.recalculate__btn_remove(type="button") -
+                  .recalculate__value.d-flex.align-items-center.justify-content-center.color-theme-white 4
+                  button.recalculate__btn.font-weight-bold.color-theme-white.flex-grow-1.recalculate__btn_add(type="button") +
+              a.btn.text-uppercase.px-3.mr-sm-4(href="#") В корзину
+            .col-xl-3.col-md-4.col-sm-6.text-center.text-sm-left
               button.btn.btn_nobg.h5.p-0(type="button")
                 +icon('plane','h3 color-theme-brand mr-2')
                 | Купить в один клик
-            .col-md-3
+            .col-xl-3.col-md-4.col-sm-6.text-center.text-sm-left
               button.btn.btn_nobg.h5.p-0(type="button")
                 +icon('card','h3 color-theme-brand mr-2')
                 | В кредит
           .row
-            .col-md-3
+            .col-xl-3.col-md-5.col-sm-6.mb-2.mb-sm-0
               span.h6.mr-1 Доставка в ваш город:
               span.h5.color-theme-brand от 350 ₽
-            .col-md-3
+            .col-xl-3.col-md-5.col-sm-6.mb-2.mb-sm-0
               span.h6.mr-1 Отгрузка:
               span.h5.color-theme-brand сегодня после 15
-            .col-md-3
+            .col-xl-3.col-md-5.col-sm-6.mb-2.mb-sm-0
               span.h6.mr-1 В наличии:
               span.h5.color-theme-brand 8 шт.
-            .col-md-3
+            .col-xl-3.col-md-5.col-sm-6.mb-2.mb-sm-0
               span.h6.mr-1 Отзывы:
               span.h5.color-theme-brand 2 шт.
-        .box-shadow.border-radius.p-4
-          .d-flex.flex-wrap.align-items-center.mb-2
-            .d-flex.align-items-center.color-theme-brand.bg-theme-light.rounded-pill.py-1.px-2.mb-1.mr-2
+        .box-shadow.border-radius.p-md-4.p-3
+          .d-flex.flex-sm-wrap.flex-column.flex-sm-row.align-items-center.mb-sm-2
+            .d-flex.align-items-center.color-theme-brand.bg-theme-light.rounded-pill.py-1.px-2.mb-3.mb-sm-2.mr-sm-2
               +icon('car','h4 mr-2')
               span.h5 Подходит для вашего авто
-            .d-flex.align-items-center.color-theme-white.bg-theme-success.rounded-pill.py-1.px-2.mb-1.mr-2
+            .d-flex.align-items-center.color-theme-white.bg-theme-success.rounded-pill.py-1.px-2.mb-3.mb-sm-2.mr-sm-2
               +icon('repair','h4 mr-2')
               span.h5 Бесплатный шиномотаж
-            .d-flex.align-items-center.color-theme-white.bg-theme-brand.rounded-pill.py-1.px-2.mb-1.mr-2
+            .d-flex.align-items-center.color-theme-white.bg-theme-brand.rounded-pill.py-1.px-2.mb-3.mb-sm-2.mr-sm-2
               +icon('delivery','h4 mr-2')
               span.h5 Бесплатная доставка
           .row
-            .col-md-3
+            .col-xl-3.col-md-4.mb-4.mb-md-0
               .desclist
                 .desclist__border.d-flex.align-items-center.justify-content-between
                   .desclist__title.h6.d-block.overflow-hidden.bg-theme-white.py-1.pr-2.zi-2 Артикул
@@ -106,25 +118,25 @@ block wrapper
                 .desclist__border.d-flex.align-items-center.justify-content-between
                   .desclist__title.h6.d-block.overflow-hidden.bg-theme-white.py-1.pr-2.zi-2 Индекс нагрузки
                   .h5.bg-theme-white.py-1.pl-1.zi-2 102 (850 кг)
-            .col-md-8.d-flex.flex-column.justify-content-between.offset-md-1
+            .col-xl-8.col-md-7.d-flex.flex-column.justify-content-between.offset-md-1
               .content
                 p Нашли дешевле? Звоните! Мы постараемся предложить Вам цену ниже!
                 p Цена указана при покупке от 4 шт. за наличный расчет. Минимальный заказ 4 шт., меньшее количество можно приобрести только по согласованию с менеджером и 100% предоплате.
                 p Остатки товара на складе меняются, о точном наличии товара и ценах уточняйте у менеджера.
-              .d-flex.align-items-center.justify-content-between
-                button.btn.btn_nobg.h5.p-0(type="button")
+              .d-flex.flex-sm-wrap.flex-column.flex-sm-row.align-items-center.justify-content-between
+                button.btn.btn_nobg.h5.p-0.mb-2.mb-sm-0(type="button")
                   +icon('share','h3 color-theme-brand mr-2')
                   | Рассказать друзьям
-                button.btn.btn_nobg.h5.p-0(type="button")
+                button.btn.btn_nobg.h5.p-0.mb-2.mb-sm-0(type="button")
                   +icon('compare','h3 color-theme-brand mr-2')
                   | Сравнить
-                button.btn.btn_nobg.h5.p-0(type="button")
+                button.btn.btn_nobg.h5.p-0.mb-2.mb-sm-0(type="button")
                   +icon('favourite','h3 color-theme-brand mr-2')
                   | В избранное
     .tabs.mb-5
       ul.nav.nav-tabs.d-flex.align-items-center.p-0.m-0(role="tablist")
         li.tabs__nav-item.nav-item.flex-grow-1
-          a.tabs__nav-link.nav-link.d-flex.align-items-center.justify-content-center.p-2.active(href="#pos-view" data-toggle="tab" role="tab" aria-controls="pos-view" aria-selected="true")
+          a.tabs__nav-link.nav-link.d-flex.align-items-center.justify-content-center.p-2(href="#pos-view" data-toggle="tab" role="tab" aria-controls="pos-view" aria-selected="true")
             +icon('view','tabs__nav-icon h4 d-flex flex-column align-items-center justify-content-center')
             span.h3.font-weight-bold.d-none.d-lg-block Обзор
         li.tabs__nav-item.nav-item.flex-grow-1
@@ -132,7 +144,7 @@ block wrapper
             +icon('desc','tabs__nav-icon h4 d-flex flex-column align-items-center justify-content-center')
             span.h3.font-weight-bold.d-none.d-lg-block Описание
         li.tabs__nav-item.nav-item.flex-grow-1
-          a.tabs__nav-link.nav-link.d-flex.align-items-center.justify-content-center.p-2(href="#pos-reviews" data-toggle="tab" role="tab" aria-controls="pos-reviews" aria-selected="true")
+          a.tabs__nav-link.nav-link.d-flex.align-items-center.justify-content-center.p-2.active(href="#pos-reviews" data-toggle="tab" role="tab" aria-controls="pos-reviews" aria-selected="true")
             +icon('reviews','tabs__nav-icon h4 d-flex flex-column align-items-center justify-content-center')
             span.h3.font-weight-bold.d-none.d-lg-block Отзывы
         li.tabs__nav-item.nav-item.flex-grow-1
@@ -144,16 +156,124 @@ block wrapper
             +icon('wallet','tabs__nav-icon h4 d-flex flex-column align-items-center justify-content-center')
             span.h3.font-weight-bold.d-none.d-lg-block Покупка и доставка
       .tabs__content.tab-content
-        .tab-pane.fade.show.active(id="pos-view" role="tabpanel" action="#")
+        .tab-pane.fade.show.px-lg-3(id="pos-view" role="tabpanel" action="#")
           .row
-            .col-md-8.offset-md-2
+            .col-xl-8.offset-xl-2.col-lg-10.offset-lg-1
               .h2.font-weight-bold.mb-4 Обзор на летние шины Pirelli P Zero от ДонШина
               .embed-responsive.embed-responsive-16by9.mb-3
                 iframe.embed-responsive-item(src="https://www.youtube.com/embed/_4rN_sP9DHU" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen)
-              .d-flex.flex-wrap.align-items-center.justify-content-between
+              .d-flex.flex-sm-wrap.flex-column.flex-sm-row.align-items-center.justify-content-between
                 button.btn.btn_nobg.h5.p-0(type="button")
                   +icon('share','h3 color-theme-brand mr-2')
                   | Рассказать друзьям
                 a.readmore.d-flex.align-items-center(href="#")
                   span.mr-2 Смотреть на нашем канале
-                  +icon('readmore','h3 color-theme-brand')
+                  +icon('readmore-right','h3 color-theme-brand')
+        .tab-pane.fade.show.px-lg-3(id="pos-desc" role="tabpanel" action="#")
+        .tab-pane.fade.show.px-lg-3.active(id="pos-reviews" role="tabpanel" action="#")
+          .row
+            .col-xl-10.offset-xl-1
+              .d-flex.flex-wrap.align-items-start.border-bottom.pb-4.mb-4
+                .col-md-3.d-flex.align-items-center.mb-3
+                  .rounded-circle.h1.d-flex.align-items-center.justify-content-center.color-theme-brand.bg-theme-light.p-3.mr-3
+                    +icon('user')
+                  .text-left
+                    .h4.color-theme-brand.mb-3 Дмитрий Леухин
+                    .h6 6 июня 2021
+                .col-md-9.h5 Сразу после первого выезда восхитился! Сцепление выше всяких похвал, руль стал крутиться чуть жестче и четче, по мягкости средние (то что надо).Тот же LATITUDE SPORT 3 стоит дороже а по параметрам хуже. Отличные шины. Много сомневался так как в отзывах писали что сильно шумят, но по факту НЕТ. Нет никакого шума. Может если на "ведро" ставить можно что то услышать. На мерседес GLC ничего не шумит. Выбирал между ними и LATITUDE SPORT 3, однозначно не прогадал! Очень советую.
+              .d-flex.flex-wrap.align-items-start.border-bottom.pb-4.mb-4
+                .col-md-3.d-flex.align-items-center.mb-3
+                  .rounded-circle.h1.d-flex.align-items-center.justify-content-center.color-theme-brand.bg-theme-light.p-3.mr-3
+                    +icon('user')
+                  .text-left
+                    .h4.color-theme-brand.mb-3 Дмитрий Леухин
+                    .h6 6 июня 2021
+                .col-md-9.h5 Сразу после первого выезда восхитился! Сцепление выше всяких похвал, руль стал крутиться чуть жестче и четче, по мягкости средние (то что надо).Тот же LATITUDE SPORT 3 стоит дороже а по параметрам хуже. Отличные шины. Много сомневался так как в отзывах писали что сильно шумят, но по факту НЕТ. Нет никакого шума. Может если на "ведро" ставить можно что то услышать. На мерседес GLC ничего не шумит. Выбирал между ними и LATITUDE SPORT 3, однозначно не прогадал! Очень советую.
+              .d-flex.flex-wrap.align-items-start.border-bottom.pb-4.mb-4
+                .col-md-3.d-flex.align-items-center.mb-3
+                  .rounded-circle.h1.d-flex.align-items-center.justify-content-center.color-theme-brand.bg-theme-light.p-3.mr-3
+                    +icon('user')
+                  .text-left
+                    .h4.color-theme-brand.mb-3 Дмитрий Леухин
+                    .h6 6 июня 2021
+                .col-md-9.h5 Сразу после первого выезда восхитился! Сцепление выше всяких похвал, руль стал крутиться чуть жестче и четче, по мягкости средние (то что надо).Тот же LATITUDE SPORT 3 стоит дороже а по параметрам хуже. Отличные шины. Много сомневался так как в отзывах писали что сильно шумят, но по факту НЕТ. Нет никакого шума. Может если на "ведро" ставить можно что то услышать. На мерседес GLC ничего не шумит. Выбирал между ними и LATITUDE SPORT 3, однозначно не прогадал! Очень советую.
+              nav.pagination
+                a.pagination__item.pagination__item_prev(href="#")
+                  +icon('readmore-right','h3 color-theme-brand')
+                span.pagination__item.pagination__item_current 1
+                a.pagination__item(href="#") 2
+                a.pagination__item(href="#") 3
+                a.pagination__item(href="#") 4
+                span.pagination__item.pagination__item_divider ...
+                a.pagination__item(href="#") 57
+                a.pagination__item.pagination__item_next(href="#")
+                  +icon('readmore-right','h3 color-theme-brand')
+        .tab-pane.fade.show.px-lg-3(id="pos-points" role="tabpanel" action="#")
+        .tab-pane.fade.show.px-lg-3(id="pos-wallet" role="tabpanel" action="#")
+
+    .mb-4
+      .h2.font-weight-bold.mb-4 Вам так же может понравиться:
+      include category/carousel
+
+    .mb-4
+      .h2.font-weight-bold.mb-4 Подходящие диски:
+      include category/wheels
+
+  .box-shadow.pt-4.pb-3.mb-5
+    .border-bottom.mb-4
+      .wrapper
+        .h2.font-weight-bold.mb-4 Другие бренды:
+        - var logoWheels = ['content/logo/logo-1.jpg','content/logo/logo-2.jpg','content/logo/logo-3.jpg','content/logo/logo-4.jpg','content/logo/logo-5.jpg','content/logo/logo-2.jpg','content/logo/logo-3.jpg','content/logo/logo-1.jpg','content/logo/logo-2.jpg','content/logo/logo-3.jpg','content/logo/logo-4.jpg','content/logo/logo-5.jpg','content/logo/logo-2.jpg','content/logo/logo-3.jpg']
+        each logoWheels__item in logoWheels
+          a.d-inline-block.mr-3.mb-4(href="#")
+            +img(logoWheels__item)
+    .wrapper
+      - var namesList = ['Cordiant','Hankook','Continental','Yokohama','Good Year','Bridgestone','Nokian tyres','Dunlop','BFGoodrich','Michelin','Kormoran','Pirelli']
+      each namesList__item in namesList
+        a.h4.d-inline-block.mr-4.mb-3(href="#")!= namesList__item
+      each namesList__item in namesList
+        a.h4.d-inline-block.mr-4.mb-3(href="#")!= namesList__item
+
+  .wrapper
+    .mb-4
+      include category/popular
+
+    .mb-4
+      .h2.font-weight-bold.mb-4 Рекомендуем так же:
+      include category/carousel
+
+    include base/links.pug
+
+    .content.content_expanded.mb-5
+      include base/content.pug
+      .content__footer
+        button.readmore.readmore_btn(type="button")
+          +icon('readmore','h2 color-theme-brand')
+
+  .modal.fade#alert(tabindex="-1" aria-hidden="true")
+    form.modal-dialog(action="#")
+      .modal-content.border-0.box-shadow.pt-3.pb-4
+        .modal-header.d-flex.align-items-center.justify-content-between.pt-0.px-4.pb-3.mb-4
+          .h3.font-weight-bold.color-theme-brand.mr-3 Товара нет в наличии
+          button.close.h2.btn-unstyled.color-theme-brand.py-0(data-dismiss="modal")
+            +icon('close')
+        .modal-body.border-bottom.pt-0.px-4.pb-2.mb-3
+          .h5.mb-4 Оставьте свой номер телефона и мы сообщим, когда данный товар  появится в нашем магазине. Так же вы может получать уведомления через мессенджеры.
+          .form.mb-4
+            .form__item.mb-4
+              input.form__field(type="text" value="")
+              .form__label.form__label_title Номер телефона *
+          .contacts
+            a.contacts__item.d-flex.align-items-center.h5.text-nowrap.mb-3(href="#")
+              +icon('wapp-filled','contacts__icon h3 color-theme-brand mr-2')
+              span.contacts__item-title Сообщить в WhatsApp
+            a.contacts__item.d-flex.align-items-center.h5.text-nowrap.mb-2(href="#")
+              +icon('tg-filled','contacts__icon h3 color-theme-brand mr-2')
+              span.contacts__item-title Сообщить в Telegram
+        .text-center.px-4
+          button.btn.text-uppercase.px-4.mb-3(type="submit") Сообщить мне
+          .h6 Нажимая кнопку “Сообщить мне”
+            br
+            | вы соглашаетесь с нашей
+            br
+            a.text-underline(href="#" target="_blank") политикой конфиденциальности.
