--- a/src/pug/article__item.pug
+++ b/src/pug/article__item.pug
@@ -45,9 +45,10 @@ block wrapper
           p Сначала вам нужно знать, какой именно тип жидкости сейчас находится в вашем автомобиле. Чаще всего это «дот-4». Ранние модификации считаются устаревшими и уже почти не применяются, а «дот-5» и «дот-5.1» можно встретить в машинах премиум-класса. Купите 1 литровую ёмкость этого же типа. Лучше всего брать одну и ту же марку, но смешивание разных не приведёт ни к чему страшному.
           p Загоните автомобиль на эстакаду или смотровую яму. Чтобы одному человеку быстро заменить тормозную жидкость, понадобится подобрать 4 небольшие ёмкости и столько же небольших шлангов или трубок. Диаметр нужно подбирать так, чтобы они плотно надевались на штуцеры каждого цилиндра. Один конец трубок надевается на открытый штуцер, а второй опускается в бутылку.
           p Теперь откройте бачок тормозной жидкости и шприцем или клизмой откачайте как можно больше старой. После чего медленно заливайте новую. Всего вам потребуется примерно литр. Оценивайте объём, вытекающий в каждую ёмкость. После того, как в передние сольётся примерно по 200 мл, а в задние — по 250-300 мл, замену можно считать завершённой. Аккуратно затяните штуцеры и доведите уровень тормозной жидкости в бачке до рекомендуемого. Учтите, что ёмкости будут наполняться неравномерно, поэтому вам придётся делать паузы, чтобы затягивать штуцеры вовремя.
-    .text-center.mb-5
-      a.readmore.readmore_arrow-down.color-theme-brand(href="#")
-        span.h4 Другие статьи
+    .d-flex.justify-content-center.mb-5
+      a.readmore.d-flex.align-items-center.color-theme-brand(href="#")
+        span.h4.mr-2 Другие статьи
+        +icon('readmore','h3 color-theme-brand')
 
     .mb-3
       .h2.font-weight-bold.mb-4 Рекомендуем так же:
@@ -58,4 +59,5 @@ block wrapper
     .content.content_expanded.mb-5
       include base/content.pug
       .content__footer
-        button.readmore.readmore_btn.readmore_arrow-down(type="button")
+        button.readmore.readmore_btn(type="button")
+          +icon('readmore','h2 color-theme-brand')
