--- a/src/pug/category-tires.pug
+++ b/src/pug/category-tires.pug
@@ -39,4 +39,5 @@ block wrapper
     .content.content_expanded.mb-5
       include base/content.pug
       .content__footer
-        button.readmore.readmore_btn.readmore_arrow-down(type="button")
+        button.readmore.readmore_btn(type="button")
+          +icon('readmore','h2 color-theme-brand')
