--- a/src/pug/category.pug
+++ b/src/pug/category.pug
@@ -26,4 +26,5 @@ block wrapper
         .content.content_expanded
           include base/content.pug
           .content__footer
-            button.readmore.readmore_btn.readmore_arrow-down(type="button")
+            button.readmore.readmore_btn(type="button")
+              +icon('readmore','h2 color-theme-brand')
