--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -68,6 +68,7 @@ $grid-gutter-width: 8px;
 @import 'tpl/accordion';
 @import 'tpl/pagination';
 @import 'tpl/recalculate';
+@import 'tpl/product-list';
 @import 'tpl/table-row';
 @import 'tpl/readmore';
 @import 'tpl/toggler';
